Copyright (C) 2022 LANNOCC (Shawn A. Wilson)
@%@~LICENSE:MIT~@%@

saw_061922_2 - Improved placement which considers window decorations offset.

saw_061922_1 - Now have a basic component model.

saw_061822_6 - Fix syntax error.

saw_061822_5 - Swap tab normal/pushed colors. Fix for Windows loading assets.

saw_061822_4 - Starting to set up some tabs.

saw_061822_3 - More window shenanigans.

saw_061822_2 - Fixing previous commit for Windows.

saw_061822_1 - Save window size/position.

saw_061722_3 - Improved window behavior and organization.

saw_061722_2 - Testing pyglet with pystray.

saw_061722_1 - Just getting started.
