@@ -1,2 +1,2 @@
-__version__ = '0.0.11'
+__version__ = '0.0.12'
 
